# WiiUCamera

./: CMakeLists.txt  LICENSE  README.md
source/: camara.h  camera_effects.h  editor.h  gallery.h  main.cpp  recorder.h
